Add index in border text center

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/my-profile-img.jpg" class="rounded" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Personal Information</h2>
@@ -240,7 +240,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
 
           <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <!-- <div class="stats-item"> -->
-              <div class="stats-item border rounded p-3 mb-3 text-center bg-light"></div>
+              <div class="stats-item border rounded p-3 mb-3 text-center bg-light">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="5"   class="purecounter"></span>
               <p><strong>Happy Clients</strong>
@@ -250,7 +250,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6 col-sm-6 col-6">
-            <div class="stats-item">
+            <div class="stats-item border rounded p-3 mb-3 text-center bg-light">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="5" class="purecounter"></span>
               <p><strong>Projects</strong> 
@@ -260,7 +260,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6 col-sm-6 col-6">
-            <div class="stats-item">
+            <div class="stats-item border rounded p-3 mb-3 text-center bg-light">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="5" class="purecounter"></span>
               <p><strong>Hours Of Support</strong> 
@@ -270,7 +270,7 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6 col-sm-6 col-6">
-            <div class="stats-item">
+            <div class="stats-item border rounded p-3 mb-3 text-center bg-light">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="5" class="purecounter"></span>
               <p><strong>Skills Mastered</strong>
