--- a/index.html
+++ b/index.html
@@ -143,9 +143,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <main class="main">
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background" style="min-height: auto;">
+    <section id="hero" class="hero section dark-background" >
 
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+
+      
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Swastik Dharpure</h2>
@@ -241,8 +243,8 @@ I’m passionate about <strong>clean code</strong>, <strong>continuous learning<
           <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <!-- <div class="stats-item"> -->
               <div class="stats-item border rounded p-3 mb-3 text-center bg-light">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="5"   class="purecounter"></span>
+              <i class="bi bi-emoji-smile "></i>
+              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="5"   class="purecounter "></span>
               <p><strong>Happy Clients</strong>
                  <!-- <span>consequuntur quae</span> -->
                 </p>
