many page add seo and meta tag

--- a/index.html
+++ b/index.html
@@ -3,33 +3,132 @@
 
 <head>
   
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Swastik Dharpure - .NET Developer</title>
-  <meta name="description" content="Portfolio of Swastik Dharpure, a passionate .NET Developer from Nagpur with experience in ASP.NET MVC, SQL Server, C#, and modern web development.">
-  <meta name="keywords" content=".NET Developer, ASP.NET, C#, SQL Server, MVC, Web Development, Swastik Dharpure, Nagpur Developer, Full Stack Developer">
-  <meta name="author" content="Swastik Dharpure">
-  <meta name="google" content="notranslate">
+  
 
 <!-- ---- -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
 
-<!-- Basic Meta Tags -->
 
+<title>Swastik Dharpure | .NET Developer & Freelancer in Nagpur, India</title>
+<meta name="description" content="Portfolio of Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India with expertise in ASP.NET MVC, SQL Server, C#, APIs, and scalable web applications. Available for freelance and remote projects.">
+<meta name="keywords" content=".NET Developer Nagpur, Freelancer Developer India, ASP.NET MVC, C#, SQL Server, API Developer, Remote Web Development, Swastik Dharpure">
+<meta name="author" content="Swastik Dharpure">
 <meta name="robots" content="index, follow">
 <meta name="language" content="English">
+<meta name="google" content="notranslate">
+<!-- Basic Meta Tags -->
+ <!-- Canonical -->
+<link rel="canonical" href="https://swastikdharpure.github.io/Portfolio/">
+<!-- Theme Color -->
+<meta name="theme-color" content="#0d6efd">
 
 <!-- Open Graph (For Facebook, LinkedIn, etc.) -->
-<meta property="og:title" content="Swastik Dharpure - .NET Developer">
-<meta property="og:description" content="Portfolio of Swastik Dharpure, a skilled .NET Developer specializing in ASP.NET MVC, SQL Server, and web application development.">
-<meta property="og:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg"> <!-- Replace with your image -->
+
+
+<meta property="og:title" content="Swastik Dharpure - .NET Developer & Freelancer in Nagpur, India">
+<meta property="og:description" content="Portfolio of Swastik Dharpure, showcasing expertise in ASP.NET MVC, SQL Server, C#, APIs, and scalable web applications. Open for freelance and remote opportunities.">
+<meta property="og:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg">
 <meta property="og:url" content="https://swastikdharpure.github.io/Portfolio/">
 <meta property="og:type" content="website">
+<meta property="og:site_name" content="Swastik Dharpure Portfolio">
+<meta property="og:image:alt" content="Swastik Dharpure - .NET Developer & Freelancer Portfolio">
+<meta name="twitter:image:alt" content="Swastik Dharpure Portfolio Image">
 
-<!-- Twitter Card (For Twitter sharing) -->
+
+<!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Swastik Dharpure - .NET Developer">
-<meta name="twitter:description" content="Explore the portfolio of Swastik Dharpure, showcasing .NET development projects and skills.">
-<meta name="twitter:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg"> <!-- Replace with your image -->
+<meta name="twitter:title" content="Swastik Dharpure - .NET Developer & Freelancer">
+<meta name="twitter:description" content="Explore the portfolio of Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India. Available for freelance and remote projects.">
+<meta name="twitter:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg">
+
+<!-- for ngp geo location -->
+<meta name="geo.region" content="IN-MH">
+<meta name="geo.placename" content="Nagpur">
+<meta name="geo.position" content="21.1458;79.0882">
+<meta name="ICBM" content="21.1458, 79.0882">
+
+<meta name="distribution" content="global">
+<meta name="rating" content="general">
+<meta name="revisit-after" content="7 days">
+<meta property="og:locale" content="en_IN">
+<meta property="og:locale:alternate" content="en_US">
+
+
+
+
+<!-- Structured Data (JSON-LD) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Person",
+      "@id": "https://swastikdharpure.github.io/Portfolio/#person",
+      "name": "Swastik Dharpure",
+      "jobTitle": ".NET Developer",
+      "description": "Swastik Dharpure is a .NET Developer and Freelancer based in Nagpur, India with expertise in ASP.NET MVC, SQL Server, API Development, and scalable web applications.",
+      "image": "https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg",
+      "url": "https://swastikdharpure.github.io/Portfolio/",
+      "sameAs": [
+        "https://www.linkedin.com/in/swastikdharpure",
+        "https://github.com/swastikdharpure"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Nagpur",
+        "addressRegion": "Maharashtra",
+        "addressCountry": "India"
+      },
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "Rashtrasant Tukadoji Maharaj Nagpur University"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Freelance Work",
+        "email": "swastikdharpure@gmail.com",
+        "telephone": "+91-9689163020",
+        "areaServed": "IN",
+        "availableLanguage": ["English", "Hindi", "Marathi"]
+      },
+      "knowsAbout": [
+        "ASP.NET MVC",
+        "C#",
+        "SQL Server",
+        "Entity Framework",
+        "API Development",
+        "Freelance Web Development"
+      ]
+    },
+    {
+      "@type": "WebSite",
+      "@id": "https://swastikdharpure.github.io/Portfolio/#website",
+      "name": "Swastik Dharpure Portfolio",
+      "url": "https://swastikdharpure.github.io/Portfolio/",
+      "description": "Portfolio of Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India with expertise in ASP.NET MVC, SQL Server, APIs, and scalable web applications.",
+      "publisher": {
+        "@id": "https://swastikdharpure.github.io/Portfolio/#person"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://swastikdharpure.github.io/Portfolio/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://swastikdharpure.github.io/Portfolio/#webpage",
+      "url": "https://swastikdharpure.github.io/Portfolio/",
+      "name": "Swastik Dharpure Portfolio",
+      "isPartOf": { "@id": "https://swastikdharpure.github.io/Portfolio/#website" },
+      "about": { "@id": "https://swastikdharpure.github.io/Portfolio/#person" },
+      "description": "Official portfolio website of Swastik Dharpure, .NET Developer & Freelancer from Nagpur, India."
+    }
+  ]
+}
+</script>
+
 
 
 <!-- --G-console-- -->
@@ -56,6 +155,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  <!-- --G-console--end -->
 
 <!-- Favicon -->
+ 
 <link rel="icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
 <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
@@ -63,8 +163,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
 <link rel="manifest" href="assets/img/favicon/site.webmanifest">
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<meta name="apple-mobile-web-app-title" content="Swastik" />
+<link rel="mask-icon" href="assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+
+<meta name="msapplication-TileColor" content="#2b5797">
+
+<link rel="dns-prefetch" href="https://fonts.googleapis.com">
+<link rel="dns-prefetch" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <!-- Favicon end---- -->
   
+   
+
+  <link rel="me" href="https://www.linkedin.com/in/swastikdharpure">
+  <link rel="me" href="https://github.com/swastikdharpure">
+
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -78,7 +197,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <!-- Main CSS File -->
 
-  <link href="assets/css/main.css" rel="stylesheet">  
+  <link href="assets/css/main.css" rel="stylesheet"> 
+
 </head>
 
 <body class="index-page">
@@ -90,7 +210,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile-img.jpg" alt="Swastik Dharpure - .NET Developer & Freelancer in Nagpur, India" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
