many page add seo and meta tag

--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  
-  
-
-<!-- ---- -->
+<head>  
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+<title>Swastik Dharpure | .NET Developer & Freelancer | Nagpur, India</title>
+<meta name="description" content="Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India. Specialized in ASP.NET MVC, SQL Server, C#, APIs, and scalable web applications. Hire me for freelance or remote projects.">
 
-
-<title>Swastik Dharpure | .NET Developer & Freelancer in Nagpur, India</title>
-<meta name="description" content="Portfolio of Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India with expertise in ASP.NET MVC, SQL Server, C#, APIs, and scalable web applications. Available for freelance and remote projects.">
 <meta name="keywords" content=".NET Developer Nagpur, Freelancer Developer India, ASP.NET MVC, C#, SQL Server, API Developer, Remote Web Development, Swastik Dharpure">
 <meta name="author" content="Swastik Dharpure">
 <meta name="robots" content="index, follow">
@@ -54,6 +49,10 @@
 <meta property="og:locale" content="en_IN">
 <meta property="og:locale:alternate" content="en_US">
 
+<meta property="og:locale" content="en_IN" />
+<meta property="og:locale:alternate" content="en_US" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 
 
 
@@ -155,8 +154,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  <!-- --G-console--end -->
 
 <!-- Favicon -->
- 
-<link rel="icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
+ <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+
 <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
 <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
