add in website changes favicon and lazy loading image

--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-
+  <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
@@ -170,8 +169,7 @@
   <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
   <link rel="manifest" href="assets/img/favicon/site.webmanifest">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />  
   <meta name="apple-mobile-web-app-title" content="Swastik" />
   <link rel="mask-icon" href="assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
 
@@ -183,19 +181,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Favicon end---- -->
-
-
-
   <link rel="me" href="https://www.linkedin.com/in/swastikdharpure">
   <link rel="me" href="https://github.com/swastikdharpure">
-
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -204,24 +196,22 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <!-- Main CSS File -->
-
   <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
 
 <body class="index-page">
+
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WPSBVKB" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
-
     <div class="profile-img">
       <img src="assets/img/my-profile-img.jpg" alt="Swastik Dharpure - .NET Developer & Freelancer in Nagpur, India"
-        class="img-fluid rounded-circle">
+        class="img-fluid rounded-circle" loading="eager">
     </div>
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <h1 class="sitename">Swastik Dharpure</h1>
@@ -274,7 +264,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
       <img src="assets/img/hero-bg.jpg" alt="Swastik Dharpure, Software Developer with abstract background"
-        data-aos="fade-in" class="">
+        data-aos="fade-in" class="" loading="eager">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Swastik Dharpure</h2>
@@ -329,7 +319,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="rounded" alt="">
+            <img src="assets/img/my-profile-img.jpg" class="rounded" alt="" loading="lazy">
           </div>
           <div class="col-lg-8 content">
             <h2>Personal Information</h2>
@@ -935,7 +925,7 @@
                     development made the project smooth and efficient.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/dummy-testo.jpg" class="testimonial-img" alt="Rajat Rabde">
+                <img src="assets/img/testimonials/dummy-testo.jpg" class="testimonial-img" alt="Rajat Rabde" loading="lazy">
                 <h3>Rajat Rabde</h3>
                 <h4>Client</h4>
               </div>
@@ -950,7 +940,7 @@
                     him an asset for any project.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/dummy-testo.jpg" class="testimonial-img" alt="Manish Laxane">
+                <img src="assets/img/testimonials/dummy-testo.jpg" class="testimonial-img" alt="Manish Laxane" loading="lazy">
                 <h3>Manish Laxane</h3>
                 <h4>Colleague</h4>
               </div>
@@ -965,7 +955,7 @@
                     technical skills were exceptional.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/dummy-testo.jpg" class="testimonial-img" alt="Soham Gruh Udyog">
+                <img src="assets/img/testimonials/dummy-testo.jpg" class="testimonial-img" alt="Soham Gruh Udyog" loading="lazy">
                 <h3>Soham Gruh Udyog</h3>
                 <h4>Client</h4>
               </div>
@@ -981,8 +971,7 @@
                     professionalism, and technical expertise were outstanding.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/dummy-testo.jpg" class="testimonial-img"
-                  alt="Testimonial from Viha Electrical">
+                <img src="assets/img/testimonials/dummy-testo.jpg" class="testimonial-img" alt="Testimonial from Viha Electrical" loading="lazy">
                 <h3>Viha Electrical</h3>
                 <h4>Client</h4>
               </div>
@@ -1103,7 +1092,7 @@
       <div class="credits">
         Designed by <a href="https://swastikdharpure.github.io/Portfolio/">
           <img src="assets/img/111.png" alt="Swastik Work Logo"
-            style="height:30px; vertical-align:middle; margin-right:8px;">
+            style="height:30px; vertical-align:middle; margin-right:8px;" loading="lazy">
 
         </a>
       </div>
