--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
           Known for delivering optimized solutions, reducing system inefficiencies, and collaborating within Agile
           teams.
         </p>
-        <a href="assets/pdf/Swastik_Dharpure_Resume.pdf" class="btn btn-primary mt-3" download>
+        <a href="assets/pdf/Swastik_Dharpure_Resume.pdf" class="btn btn-success mt-3" download>
           📄 Download Resume
         </a>
       </div><!-- End Section Title -->
@@ -1037,7 +1037,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
+            <form action="#" method="post" class="php-email-form" data-aos="fade-up"
               data-aos-delay="200">
               <div class="row gy-4">
 
@@ -1128,6 +1128,7 @@
   .purecounter::after {
     content: "+";
   }
+  
 </style>
 
 </html>
