--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="#" method="post" class="php-email-form" data-aos="fade-up"
+             <form action="#" id="contact-form"  class="php-email-form" data-aos="fade-up"
               data-aos-delay="200">
               <div class="row gy-4">
 
@@ -1071,6 +1071,14 @@
 
               </div>
             </form>
+          
+          <!-- <form id="contact-form">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <input type="text" name="subject" placeholder="Subject" required>
+  <textarea name="message" placeholder="Message" required></textarea>
+  <button type="submit">Send Message</button>
+</form> -->
           </div><!-- End Contact Form -->
 
         </div>
@@ -1130,5 +1138,31 @@
   }
   
 </style>
+<script>
+  document.getElementById("contact-form").addEventListener("submit", function(e) {
+    e.preventDefault();
 
+    const formData = {
+      name: this.name.value,
+      email: this.email.value,
+      subject: this.subject.value,
+      message: this.message.value
+    };
+
+    fetch("https://script.google.com/macros/s/AKfycbws2gUyH3Uw4crV23INqTRbugY-ajpy6uhySVoP6UhxC1d2ykDekMAJIxbMcc8TbcbD/exec", {
+      method: "POST",
+      body: JSON.stringify(formData)
+    })
+    .then(res => res.json())
+    .then(data => {
+      if (data.status === "success") {
+        alert("Message sent successfully!");
+        this.reset();
+      } else {
+        alert("Failed to send message.");
+      }
+    })
+    .catch(err => alert("Error: " + err));
+  });
+</script>
 </html>
