Add portfolio pages website section

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <!-- <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li> -->
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li> 
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <!-- <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
@@ -626,12 +626,12 @@
 
 
     <!-- Portfolio Section -->
-    <!-- <section id="portfolio" class="portfolio section light-background">
+    <section id="portfolio" class="portfolio section light-background">
 
       
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+       <p>Here are some of the projects I have worked on, showcasing my skills in web development, app design, and branding solutions.</p>
       </div>
 
       <div class="container">
@@ -640,10 +640,10 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
+            <!-- <li data-filter=".filter-app">App</li> -->
             <li data-filter=".filter-product">Product</li>
             <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">Books</li>
+            <li data-filter=".filter-books">Website</li>
           </ul>
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -686,12 +686,13 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/NagpurMetro.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Books 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Nagpur Metro Official Website</h4>
+                 <p>Maintaining and developing the Nagpur Metro website using ASP.NET Web form & SQL Server.</p>
+
+                  <a href="assets/img/portfolio/NagpurMetro.png" title="Nagpur Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="NagpurMetro.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -733,12 +734,12 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/PuneMetro.png" class="img-fluid" alt="Pune Metro">
                 <div class="portfolio-info">
-                  <h4>Books 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Pune Metro Official Website</h4>
+                  <p>Maintaining and developing the Pune Metro website using ASP.NET Web form & SQL Server.</p>
+                  <a href="assets/img/portfolio/PuneMetro.png" title="Pune Metro" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="PuneMetro.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -780,23 +781,48 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/ThaneMetro.png" class="img-fluid" alt=" Thane Metro">
                 <div class="portfolio-info">
-                  <h4>Books 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Thane Metro Official Website</h4>
+                  <p>Maintaining and developing the ThaneMetro website using ASP.NET MVC5 & SQL Server.</p>
+                  <a href="assets/img/portfolio/ThaneMetro.png" title="Thane Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="ThaneMetro.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/MahaMetro.png" class="img-fluid" alt="Maha Metro">
+                <div class="portfolio-info">
+                  <h4>Maha Metro Official Website</h4>
+                  <p>Maintaining and developing the MahaMetro website using ASP.NET MVC5 & SQL Server.</p>
+                  <a href="assets/img/portfolio/MahaMetro.png" title="Maha Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="MahaMetro.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/Mahagenco.jpg" class="img-fluid" alt="Mahagenco">
+                <div class="portfolio-info">
+                  <h4>Mahagenco Official Website</h4>
+                  <p>Maintaining and developing the Mahagenco website using ASP.NET MVC5 & SQL Server.</p>
+                  <a href="assets/img/portfolio/Mahagenco.jpg" title="Mahagenco Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="Mahagenco.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
 
         </div>
 
       </div>
 
-    </section> -->
+    </section>
     <!-- /Portfolio Section -->
 
     <!-- Services Section -->
