Add portfolio pages website section

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>App 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -662,7 +662,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>Product 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -674,7 +674,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>Branding 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -686,7 +686,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/NagpurMetro.png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/NagpurMetro.png" class="img-fluid" loading="lazy" alt="Nagpur Metro">
                 <div class="portfolio-info">
                   <h4>Nagpur Metro Official Website</h4>
                  <p>Maintaining and developing the Nagpur Metro website using ASP.NET Web form & SQL Server.</p>
@@ -698,7 +698,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>App 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -710,7 +710,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>Product 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -722,7 +722,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>Branding 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -734,7 +734,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/PuneMetro.png" class="img-fluid" alt="Pune Metro">
+                <img src="assets/img/portfolio/PuneMetro.png" class="img-fluid" loading="lazy" alt="Pune Metro">
                 <div class="portfolio-info">
                   <h4>Pune Metro Official Website</h4>
                   <p>Maintaining and developing the Pune Metro website using ASP.NET Web form & SQL Server.</p>
@@ -746,7 +746,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>App 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -758,7 +758,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>Product 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -769,7 +769,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" loading="lazy" alt="">
                 <div class="portfolio-info">
                   <h4>Branding 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -781,7 +781,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ThaneMetro.png" class="img-fluid" alt=" Thane Metro">
+                <img src="assets/img/portfolio/ThaneMetro.png" class="img-fluid" loading="lazy" alt=" Thane Metro">
                 <div class="portfolio-info">
                   <h4>Thane Metro Official Website</h4>
                   <p>Maintaining and developing the ThaneMetro website using ASP.NET MVC5 & SQL Server.</p>
@@ -793,7 +793,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/MahaMetro.png" class="img-fluid" alt="Maha Metro">
+                <img src="assets/img/portfolio/MahaMetro.png" class="img-fluid" loading="lazy" alt="Maha Metro">
                 <div class="portfolio-info">
                   <h4>Maha Metro Official Website</h4>
                   <p>Maintaining and developing the MahaMetro website using ASP.NET MVC5 & SQL Server.</p>
@@ -807,7 +807,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/Mahagenco.jpg" class="img-fluid" alt="Mahagenco">
+                <img src="assets/img/portfolio/Mahagenco.jpg" class="img-fluid" loading="lazy" alt="Mahagenco">
                 <div class="portfolio-info">
                   <h4>Mahagenco Official Website</h4>
                   <p>Maintaining and developing the Mahagenco website using ASP.NET MVC5 & SQL Server.</p>
